tests/runaway_argument.expected
File: runaway_argument.tex

Error on line 4: Command \date was not properly ended with curly brace.
Error at the end: Command \date was not properly ended with curly brace.
