tests/runaway_argument.tex
\documentclass{article}

\begin{document}
\date{April 2018 \maketitle

\date{April 2018 \maketitle
\end{document}
